-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.618 2009-09-14 02:37:59 guru Exp $
-----------------------------------------------------------------------------------------

2009-09-13	pwessel
	* misc/gmt2kml.c:	Avoid mixing stdout/GMT_stdout as Windoze is Windoze.
	* misc/kml2gmt.c:	Avoid mixing stdout/GMT_stdout as Windoze is Windoze.

2009-09-12	pwessel
	* spotter:		Failed in 64-bit mode due to variable mismatch:
	* spotter/backtracker.c:	Needed GMT_LONG variables to be passed to GMT libs
	* spotter/hotspotter.c:		Needed GMT_LONG variables to be passed to GMT libs
	* spotter/originator.c:		Needed GMT_LONG variables to be passed to GMT libs
	
2009-09-11	remko
	* gmtdefaults_*.in:	Enter TRANSPARENCY = 0; replaced color triplets by names.
	* gmt_init.c:		Let gmtdefaults output TRANSPARENCY and print colors as names
				if available.
	* gmt_support.c:	Added GMT_getrgb_index to get index of preset RGB triplets.
	* gmt_{init,map.c}:	When using -JX, give width or height as 0 and it will adjust to
				the scale of the other (keeping aspect ratio).

2009-09-10	pwessel
	* grdcontour.c:		The -L option was not used in limiting contours.
	
2009-09-10	remko
	* gmt_init.c:		Introduced option to make material transparent using the
				--TRANSPARENCY setting (or gmtset TRANSPARENCY). Can be viewed
				with Adobe Distiller (only?).
	* gmt_plot.c, gmtdefaults.txt, gmt.h, gmt_globals.h, gmt_keywords.d:	---"---
	* psclip.c, pscoast.c:	Replaced booleans GMT_ps.clip_on and GMT_ps.clip_off with single
				GMT_ps.clip with values -1, 0 or +1.
	* configure.ac, all makefiles:	Needed to redo the way GDAL_INC and GDAL_LIB are inserted.
				-I (without anything) of -L (without anything) when GDAL is not
				enabled makes compiling impossible. So *_LIB and *_INC (also
				NETCDF) now include the -I and -L/-l flags.

2009-09-10	jluis
	* mgd77/mgd77magref.c:	It now lets the Core field be computed with the IGRF and added