@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_home.html,v 1.26 2009-09-10 08:32:26 guru Exp $      -->
+<!--    $Id: gmt_home.html,v 1.27 2009-09-15 07:51:30 guru Exp $      -->
 <HEAD>
 <TITLE>GMT - The Generic Mapping Tools</TITLE>
 </HEAD>
@@ -23,7 +23,7 @@ and is supported by the
 It is released under the
 <A HREF="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU General Public License</A>.
 <HR>
-<CENTER>Current version is 4.5.1, Released September 15, 2009.<CENTER>
+<CENTER>Current version is 4.5.1, Released September 20, 2009.<CENTER>
 <CENTER><IMG SRC="gmt_usage.jpg" ALT="RETURN" BORDER=0></CENTER>
 <P><H5>GMT is used all over the world. Each yellow dot represent a 15x15 arc minute block with one
 or more registered user or institution.  So far, about 1800 such blocks have been registered,
