@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_nav.html,v 1.24 2009-09-10 08:32:26 guru Exp $      -->
+<!--    $Id: gmt_nav.html,v 1.25 2009-09-15 07:51:30 guru Exp $      -->
 <HEAD>
 <TITLE>The GMT Home Page</TITLE>
 </HEAD>
@@ -63,7 +63,7 @@
 Paul Wessel
 </ADDRESS>
 <BR>Last updated:
-<BR>Sept. 15, 2009
+<BR>Sept. 20, 2009
 <HR><P>
 <A HREF="http://www.soest.hawaii.edu/" target="_top"><IMG SRC="soest_oval_logo_web.gif" ALT="Visit SOEST"></A><BR>
 Visit SOEST home page
